# sql-normalizer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/exasol_sql_normalizer/: normalizer.py  utils.py
src/exasol_sql_normalizer/handlers/: __init__.py  convert.py  export_into.py  group_concat.py  import_from.py  import_into.py  regexp_like.py
tests/: test_convert.py  test_export_into.py  test_group_concat.py  test_import_from.py  test_import_into.py  test_normalize.py  test_regexp_like.py  test_utils.py
