[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exasol-sql-normalizer"
version = "0.1.0"
description = "Rewrites Exasol-specific SQL into standard SQL for parser compatibility"
readme = "TRANSLATOR.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "sqlglot>=20.0"]
